--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,25 @@ select {
   transition: all 1s ease;
 }
 
+.loader-message{
+  background-color: #222222;
+  position: fixed;
+  left: 0;
+  top:150px;
+  height: 100%;
+  width: 100%;
+  z-index: 150;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
+}
+
+
 .disppear{
   -webkit-animation: vanish 1s forwards;
   animation: vanish 1s forwards;
